# Dev_ucoslam

./: CMakeLists.txt
cmake/: config.cmake.in  dependencies.cmake
gui/: installer_script.iss
src/: CMakeLists.txt  imageparams.cpp  imageparams.h  map.cpp  map.h  ucoslam.cpp  ucoslam.h  ucoslamtypes.h
src/featureextractors/: gridextractor.cpp
src/map_types/: frame.cpp  frame.h
src/optimization/: globaloptimizer_g2o.cpp
src/utils/: frameextractor.cpp  framematcher.cpp  loopdetector.cpp  mapinitializer.cpp  mapinitializer.h  mapmanager.cpp  mapmanager.h  system.cpp  system.h
utils/: CMakeLists.txt  map_to_pcd.cpp  monocular_slam.cpp
